<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_educator"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context="com.example.sechaba.groupl.CreateReportLearner">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="16dp"
        android:textStyle="bold"
        android:id="@+id/tv_choose_leaner"
        tools:text="@string/tv_choose_leaner"
        android:text="@string/tv_choose_leaner" />

    <EditText
        android:id="@+id/shownamelearn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:background="@drawable/customise_btn"
        />



    <TextView
        android:text="@string/tv_recomends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="16dp"
        android:textStyle="bold"
        android:id="@+id/textView2"
        tools:text="@string/tv_recomends" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_height="wrap_content" >

        <RadioButton
            android:text="@string/rbtn_for_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/rbtn_for_info" />

        <RadioButton
            android:text="@string/rbtn_inform_parents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/rbnt_inform" />

        <RadioButton
            android:text="@string/rbtn_get_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/rbtn_get" />

    </RadioGroup>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/tv_notify"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:id="@+id/et_title"
        tools:text="@string/tv_notify" />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:id="@+id/data"
        android:textColor="@color/white"
        android:hint="@string/hint_enter_report" />

    <Button
        android:text="@string/btn_submit_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="submitreport"
        android:background="@drawable/customise_btn"
        android:layout_marginTop="10dp"
        android:id="@+id/btn_submit_report" />

</LinearLayout>
