<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/gray"
    tools:context="com.example.sechaba.groupl.Registration"
    android:weightSum="1">

    <TextView
        android:text="@string/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/tv_register" />

    <Button
        android:text="@string/upload"
        android:onClick="clicks"
        android:background="@drawable/customise_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/uplodpic" />

    <ImageView
        android:id="@+id/userpic"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_weight="0.23"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        app:srcCompat="@drawable/opload" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_name"
        android:layout_marginTop="5dp"
        android:hint="@string/hint_name"
        android:gravity="center_vertical|center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:id="@+id/et_surname"
        android:hint="@string/hint_surname"
        android:gravity="center_vertical|center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:id="@+id/et_email"
        android:hint="@string/hint_email"
        android:gravity="center_vertical|center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:id="@+id/et_password"
        android:hint="@string/hint_password"
        android:gravity="center_vertical|center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/re_enterps"
        android:layout_gravity="center"
        android:gravity="center"
        android:ems="10"
        android:id="@+id/re_password" />

    <Button
        android:text="@string/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/BTN_register"
        android:background="@drawable/customise_btn"
        android:layout_marginTop="5dp"
        android:onClick="Register"
        android:layout_weight="0.16" />

</LinearLayout>
