<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@color/gray"
    tools:context="com.example.sechaba.groupl.MainActivity"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/tvLoading"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="23dp"

        android:baselineAlignBottom="false"
        android:fadingEdge="horizontal|vertical"
        android:src="@drawable/myguy" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_email"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:hint="@string/hint_email"
        tools:gravity="center" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:gravity="center"
        android:textColor="@color/white"
        android:hint="@string/hint_password"
        android:ems="10"
        android:id="@+id/et_password" />

    <Button
        android:text="@string/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/customise_btn"
        android:id="@+id/btn_login"
        android:onClick="Button"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/btn_register"
            android:layout_width="150dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:background="@drawable/customise_btn"
            android:onClick="Button"
            android:text="@string/btn_register" />

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="150dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/customise_btn"
            android:onClick="clicking"
            android:text="@string/btn_reset" />
    </LinearLayout>



</LinearLayout>
