<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_homescreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sechaba.groupl.Homescreen">

    <TextView
        android:id="@+id/emailuser"
        android:layout_width="match_parent"
        android:textSize="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_height="wrap_content"
         />

    <ImageView
        android:layout_width="299dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:id="@+id/imageView2" />

    <Button
        android:text="@string/btn_classes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/customise_btn"
        android:id="@+id/btn_class"
        android:onClick="Button2" />

    <Button
        android:text="@string/btn_tuckshop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/customise_btn"
        android:id="@+id/btn_tuckshop"
        android:onClick="Button2" />

    <Button
        android:text="@string/btn_reports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/customise_btn"
        android:id="@+id/btn_report"
        android:onClick="Button2" />

    <Button
        android:text="@string/btn_admin_master"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/customise_btn"
        android:id="@+id/btn_admin_master_menu"
        android:onClick="Button2" />
</LinearLayout>
